--- a/3.2_Model2_MRQA/ReadMe
+++ b/3.2_Model2_MRQA/ReadMe
@@ -25,10 +25,18 @@ The scipt discarded the frames that are not good and outputs an excel files that
 frames we have. This is used as preliminary analysis.
 
 # main_input_data_process # 
-This script outputs an excel file (that is going to be the input of the MRQA): this file 
+This script outputs an excel file for each dataset that is going to be the input of the MRQA.
+Each row of the excel file represents a frame of the analysed video and it gives information about x and y coordinates for the 
+selected keypoints (i.e. Neck and Nose) for both mom and baby.
+If the frames is a discarded one (does not fit the criteria previously explained) a line og NaNs is displayed.
+
+
+# functions.py #
+This file contains all the functions to run the two main scripts.
 
 
 ## Run the code and analyzed parameters ## 
+There are serveral paraments that can be set and changed before running the analysis.
 - path root
 - excel file name
 - keypoints analyzed
